--- a/Frontend/frontend/package.json
+++ b/Frontend/frontend/package.json
@@ -11,9 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.4.47",
     "axios": "^1.7.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vuetify": "^3.7.9",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
