--- a/Frontend/frontend/package.json
+++ b/Frontend/frontend/package.json
@@ -13,6 +13,7 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/js": "^7.4.47",
     "axios": "^1.7.9",
+    "firebase": "^11.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.9",
